<resources>
    <string name="app_name">Speed Shopping List</string>
    <string name="email">Email</string>
    <string name="phone">Phone number</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="new_user_signup">New user?</string>
    <string name="signup">Sign Up</string>
    <string name="send">Send</string>
    <string name="send_verification">Send Verification Code</string>
    <string name="please_enter_your_registered_email_address_and_we_will_send_you_a_reset_link">Please enter your registered email address and we will send you a reset link</string>
    <string name="mobile_activity_description">Please enter your Phone number and we will send you a verification Code.</string>
    <string name="already_have_an_account_login">Already have an Account ?</string>
    <string name="verification">Verification</string>
    <string name="we_have_sent_you_an_access_code_via_sms_mobile_number_verification">We have sent you an access code via sms mobile number verification</string>
    <string name="we_have_sent_you_an_access_code_via_email">We have sent you an access code via email</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="resend_code">Resend Code</string>
    <string name="not_connected_to_internet">Not connect to internet</string>
    <string name="address_unnamed_road_sector_a_gumasta_nagar_scheme_71_indore_madhya_pradesh_452002">Address: Unnamed Road, Sector A, Gumasta Nagar, Scheme 71, Indore, Madhya Pradesh 452002</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="server_client_id">499879191944-0rkaqpi5k4fsu1f9ovj6p31ovohm6gmb.apps.googleusercontent.com</string>

    <string name="google_maps_key">AIzaSyAdiJ2Yt1Onq0eGV5cgLlGMARvR1VN8zTU</string>

    <string name="list_name">List Name</string>
    <string name="done">Done</string>
    <string name="grocery_store">GROCERY STORE</string>
    <string name="update_profile">Update profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="want_delete_account">Are you sure you want to delete your account?</string>
    <string name="color">Color</string>
    <string name="buy_sstx">BUY SSTX</string>
    <string name="money">\'MONEY\'</string>
    <string name="token">\'TOKEN\'</string>
    <string name="tokens">\'TOKENS\'</string>
    <string name="_10000">10000</string>
    <string name="sstx">SSTX</string>
    <string name="speed_tokens">SPEED TOKENS</string>
    <string name="transfer">TRANSFER</string>
    <string name="logout">Logout</string>
    <string name="pick_image_intent_text">Select image from</string>
    <string name="by_signin_in_you_agree_to_our">By logging in,You agree to our</string>
    <string name="term">Terms &amp; Conditions</string>
    <string name="terms_amp_condition"><a href=""><font style="color:#2E2886;">Terms &amp; Conditions</font></a></string>
    <string name="and">and</string>
    <string name="privacy">Privacy Policy</string>
    <string name="privacy_policy"><a href=""><font style="color:#2E2886;">Privacy Policy</font></a></string>
    <string name="item_name_aisle">Item Name</string>
    <string name="add_aisle_location">Add aisle</string>
    <string name="name">Name</string>
    <string name="enter_item">Enter item</string>
    <string name="no_items_available">No Items Available</string>
    <string name="no_products_available">No Products Available</string>
    <string name="no_stores_available">No Stores Available</string>
    <string name="no_notifications_available">No Notifications Available</string>
    <string name="no_messages_available">No Messages Available</string>
    <string name="no_transaction_available">No Transaction History Available</string>
    <string name="no_coupons_available">No Codes Available</string>
    <string name="speech_not_supported">Speech not supported</string>
    <string name="speech_prompt">Speak</string>
    <string name="store_search">Store Search</string>
    <string name="wallet">Wallet</string>
    <string name="shopping_list">Shopping List</string>
    <string name="home">My Lists</string>
    <string name="search_here">Search here...</string>
    <string name="search_store">Search Stores</string>
    <string name="shopping_list_text">Speed Shopping List</string>
    <string name="update_list_name">Update list name</string>
    <string name="add_list_name">Add list name</string>
    <!--  <string name="facebook_app_id">257618808214982</string>-->
    <string name="facebook_app_id">550058602311955</string>
    <string name="fb_login_protocol_scheme">fb550058602311955</string>
    <string name="places_app_id">257618808214982</string>
    <string name="login_with_facebook">facebook</string>
    <string name="address_txt"><b>Address: </b></string>
    <string name="tap_the_shopping_list_name_to_add_items">TAP THE SHOPPING LIST NAME TO ADD ITEMS</string>
    <string name="update">Update</string>
    <string name="my_list">My Lists</string>
    <string name="pre_made">Pre-Made Lists</string>
    <string name="sync">Sync</string>
    <string name="okay">Ok</string>
    <string name="you_cannot_select_this_store_out_of_range">You cannot select this store. \nOut of range.</string>
    <string name="unable_to_add_aisle">Unable to add aisle</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="add_your_feedback_here_and_press_submit">ADD YOUR FEEDBACK HERE AND\nPRESS SUBMIT</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_small">Contact Us</string>
    <string name="coupon_code">My Codes</string>
    <string name="what_is_lorem_ipsum">What is Lorem Ipsum?</string>
    <string name="faq">FAQ</string>
    <string name="faq_list">FAQ List</string>
    <string name="description">Description</string>
    <string name="buy_detail">Are you sure you want \n to buy this item.</string>
    <string name="eth">ETH</string>
    <string name="deposit">Deposit</string>
    <string name="your_secure_wallet_address">your secure wallet address</string>
    <string name="tap_the_plus_button_to_create_your_list">Tap the plus button to \ncreate your list</string>
    <string name="camera_permission_needed">Camera Permission Needed</string>
    <string name="grant">Grant</string>
    <string name="enable">Enable</string>
    <string name="pickphoto">Pick Profile Photo</string>
    <string name="dialog_crypro">Add the aisle number and we\'ll pay you cryptocurrency!</string>
    <string name="copy_to_clipboard_successfully">Copy to Clipboard Successfully.</string>
    <string name="set_radius">Set Radius</string>
    <string name="stores_not_in_range">Stores not in Range.</string>
    <string name="stores_near_you">Stores Near You</string>
    <string name="choose_from_map">Choose From Map Below</string>
    <string name="aisle">Aisle</string>
    <string name="or">OR</string>
    <string name="google">Google</string>
    <string name="address">Address-</string>
    <string name="private_address">Private Address-</string>
    <string name="error_in_facebook">Error in facebook login</string>
    <string name="facebook_login_cancel">Facebook login cancel</string>
    <string name="logo_text">Logo Text</string>
    <string name="my_lists">My Lists</string>
    <string name="my_profile">My Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="sstx_market">SSTX Market</string>
    <string name="gift_cards">Gift Cards</string>
    <string name="notifications">Notifications</string>
    <string name="coupon_codes">Coupon Codes</string>
    <string name="pre_made_list">Pre-made List</string>
    <string name="ez_lists">EZ Lists</string>
    <string name="help_faq">Help/FAQ</string>
    <string name="back">Back</string>
    <string name="qty">Qty</string>
    <string name="colon">:</string>
    <string name="add_aisle">Add Aisle</string>
    <string name="delete_checked">Delete Checked</string>
    <string name="delete_all">Delete All</string>
    <string name="reverse_sort">Reverse Sort</string>
    <string name="quantity">Quantity</string>
    <string name="add_stores">Add Stores</string>
    <string name="select_aisle_location">Select Aisle Location</string>
    <string name="optional">(Optional)</string>
    <string name="item">Item</string>
    <string name="you_ve_earned">YOU\'VE EARNED</string>
    <string name="tap_here_to_add_aisle">Tap here to add aisle</string>
    <string name="website">Website :</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="make_your_selection">Make your selection</string>
    <string name="search">Search</string>
    <string name="speed_shopper">Speed Shopping List</string>
    <string name="ok">Ok</string>
    <string name="select_store_to_import_items">Select store to import items</string>
    <string name="todo">TODO</string>
    <string name="history">History</string>
    <string name="store_unavailable">Store unavailable</string>
    <string name="store_name">STORE NAME -</string>
    <string name="product">PRODUCT -</string>
    <string name="sstx_string">SSTX -</string>
    <string name="website_string">WEBSITE -</string>
    <string name="loading">Loading</string>
    <string name="create_a_name_for_your_list">CREATE A NAME FOR YOUR LIST</string>
    <string name="app_id">ca-app-pub-1558394739169751~2076464822</string>
    <string name="banner_id">ca-app-pub-1558394739169751/9069851223</string>
    <string name="interstitial_id">ca-app-pub-1558394739169751/2424240135</string>
    <string name="purchase_head">Purchase</string>
    <string name="purchase_detail">You have to puchase the shopping list logo.  Are you sure you want to purchase the logos?</string>
    <string name="reply_description">OUR REPLIES WILL APPEAR BELOW</string>
    <string name="signup_success">Profile created! Verify your profile to begin.  You can either wait for the email or verify quickly by text message.</string>
    <string name="text_me">Text Me</string>
    <string name="email_me">Email Me</string>

    <string-array name="radius">
        <item>5 Miles</item>
        <item>10 Miles</item>
        <item>25 Miles</item>
        <item>50 Miles</item>
        <item>100 Miles</item>
    </string-array>

    <string name="coming_soon">This Function will be come soon</string>

    <string name="sort">Sort</string>
    <string name="sort_items">Sort By</string>
    <string name="sort_aisle_up">Aisle Up</string>
    <string name="sort_aisle_down">Aisle Down</string>
    <string name="sort_alpha_up">A ~ Z</string>
    <string name="sort_alpha_down">Z ~ A</string>
    <string-array name="sort_items_options_array">
        <item>Name</item>
        <item>Name (Desc)</item>
        <item>Last Modified Time</item>
        <item>Last Modified Time (Desc)</item>
    </string-array>
</resources>
