<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_chat_box"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/speed_shopper"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/msg_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/signup_success"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey_300" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_me"
                android:textColor="@color/colorPrimary"
                android:textSize="14dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_300" />

            <TextView
                android:id="@+id/btn_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/email_me"
                android:textColor="@color/colorPrimary"
                android:textSize="14dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>