<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <ImageView
        android:id="@+id/iconSpeed"
        android:layout_width="270sp"
        android:layout_above="@+id/inpText"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/speed_shopper_text_logo" />

    <TextView
        android:id="@+id/inpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtContactUs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/add_your_feedback_here_and_press_submit"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/txtContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inputType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/inputType"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/edit_bg_new"
        android:gravity="start"
        android:hint="@string/message"
        android:layout_marginTop="20sp"
        android:maxLines="6"
        android:minLines="6"
        android:padding="15sp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/btnSubmit"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputType"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        android:layout_marginTop="30sp"
        android:hint="@string/submit"
        android:paddingBottom="12sp"
        android:paddingLeft="14sp"
        android:paddingRight="14sp"
        android:paddingTop="12sp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="14sp" />


</RelativeLayout>