<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.ProfileFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:scaleType="centerCrop"
        android:src="@drawable/wallet_bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="118dp"
        android:background="@drawable/oval" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:src="@drawable/wallet" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:text="@string/sstx"
        android:textColor="@color/colorAppBlue"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/lay_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView"
        android:background="@color/grey_100"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:gravity="center"
            android:text="@string/money"
            android:textSize="12sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_deposit"
        android:layout_marginBottom="60dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sstx"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selection"
            android:text="@string/sstx"
            android:textColor="@drawable/btn_text_selection"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_eth"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selection"
            android:text="@string/eth"
            android:textColor="@drawable/btn_text_selection"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_deposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAppBlue"
        android:text="@string/deposit"

        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="17sp" />
</RelativeLayout>